# smile

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: Aka2G.cpp  Aka2G.h  BIPSeedDerivation.cpp  BIPSeedDerivation.h  Bip32Wallet.cpp  Bip32Wallet.h  CValues.cpp  CValues.h  Milenage.cpp  Milenage.h  Sim.cpp  Sim.h  SimEmulator.cpp  SimEmulator.h  SmileSeedDerivation.cpp  SmileSeedDerivation.h  Wallet.cpp  Wallet.h  common.h  comp128_table.cpp  comp128_table.h  kdf.cpp  kdf.h  main.cpp  sim.cpp  sim.h  smile_kdf.cpp  smile_kdf.h  smile_sim.cpp  smile_wallet.cpp  wallet.cpp  wallet.h
